View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027715 | Open CASCADE | OCCT:Visualization | public | 2016-07-26 20:58 | 2022-04-06 02:15 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027715: Visualization - turn off deprecated OpenGL fixed-function pipeline by default | ||||
Description | Fixed-function pipeline (FFP) has been deprecated since OCCT 7.0.0, so now it is time to turn off it by default to test main rendering pipeline. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
parent of | 0028062 | closed | abv | Open CASCADE | Samples - Shading model functionality does not work in mfc Viewer3d |
parent of | 0028072 | closed | apn | Open CASCADE | Samples - remove deprecated vector export from MFC sample |
parent of | 0032150 | closed | bugmaster | Open CASCADE | Visualization, TKOpenGl - ignore OpenGl_Caps::ffpEnable when FFP is unavailable |
related to | 0028069 | closed | bugmaster | Open CASCADE | Visualization, TKOpenGl - handle flat shading model within GLSL programs |
child of | 0024838 | closed | bugmaster | Open CASCADE | Visualization, TKOpenGl - make general rendering path compatible with OpenGL 3.1+ core profiles |
Not all the children of this issue are yet resolved or closed. |
|
Branch CR27715 has been created by kgv. SHA-1: 21fc210d23a411eee0745d5d77c94c908992dd28 Detailed log of new commits: Author: kgv Date: Tue Jul 26 22:08:39 2016 +0300 0027715: Visualization - turn off deprecated OpenGL fixed-function pipeline by default OpenGl_Caps - flag ffpEnable is now initialized to false on desktop OpenGL. OpenGl_Context::init() - now prints error if OpenGL version does not support GLSL and switches OpenGl_Caps::ffpEnable to true. |
|
Please test the patch. |
|
Dear BugMaster, Branch CR27715 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 21fc210d23a411eee0745d5d77c94c908992dd28 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1131 Regressions/Differences: http://occt-tests/CR27715-master-OCCT/Debian70-64/summary.html http://occt-tests/CR27715-master-OCCT/Windows-64-VC10/summary.html bugs vis bug22332, bug23407_2, bug24622 Testing cases: Not needed Testing on Linux: Total MEMORY difference: 90368776 / 89463722 [+1.01%] Total CPU difference: 19278.31999999992 / 19284.62000000005 [-0.03%] Testing on Windows: Total MEMORY difference: 57420593 / 57426021 [-0.01%] Total CPU difference: 18158.017196798886 / 17961.98634019861 [+1.09%] There are differences in images found by testdiff: http://occt-tests/CR27715-master-OCCT/Debian70-64/diff-Debian70-64.html http://occt-tests/CR27715-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html v3d point_cloud sphere bugs xde bug23969 bugs vis bug6897_1 bugs vis bug9517 bugs vis buc60738 bugs vis bug6897_2 bugs vis bug25768 bugs vis bug24622 |
|
Dear Kirill, Branch CR27715 has been rejected due to: - regressions/differences/improvements - differences in images |
|
Branch CR27715 has been updated by kgv. SHA-1: 23e8f444b7ff09f7700b98a8a4d385038365b548 Detailed log of new commits: Author: kgv Date: Thu Jul 28 11:59:07 2016 +0300 update test cases |
|
The image difference is OK, failing test cases have been corrected. Please switch to TESTED. |
|
Branch CR27715 has been deleted by inv. SHA-1: 23e8f444b7ff09f7700b98a8a4d385038365b548 |
occt: master be375252 2016-07-26 19:08:39 Committer: bugmaster Details Diff |
0027715: Visualization - turn off deprecated OpenGL fixed-function pipeline by default OpenGl_Caps - flag ffpEnable is now initialized to false on desktop OpenGL. OpenGl_Context::init() - now prints error if OpenGL version does not support GLSL and switches OpenGl_Caps::ffpEnable to true. update test cases |
Affected Issues 0027715 |
|
mod - src/OpenGl/OpenGl_Caps.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - tests/3rdparty/export/end | Diff File | ||
mod - tests/bugs/moddata_2/bug23172 | Diff File | ||
mod - tests/bugs/vis/bug21091_3 | Diff File | ||
mod - tests/bugs/vis/bug21091_4 | Diff File | ||
mod - tests/bugs/vis/bug21091_5 | Diff File | ||
mod - tests/bugs/vis/bug21091_6 | Diff File | ||
mod - tests/bugs/vis/bug21091_7 | Diff File | ||
mod - tests/bugs/vis/bug21091_8 | Diff File | ||
mod - tests/bugs/vis/bug21091_9 | Diff File | ||
rm - tests/bugs/vis/bug22332 | Diff File | ||
mod - tests/bugs/vis/bug22368 | Diff File | ||
mod - tests/bugs/vis/bug22796_3 | Diff File | ||
mod - tests/bugs/vis/bug23407_2 | Diff File | ||
mod - tests/bugs/vis/bug23747_2 | Diff File | ||
mod - tests/bugs/vis/bug24224 | Diff File | ||
mod - tests/bugs/vis/bug24622 | Diff File | ||
mod - tests/bugs/vis/bug24728 | Diff File | ||
mod - tests/bugs/vis/bug25611_1 | Diff File | ||
mod - tests/bugs/vis/bug25611_2 | Diff File | ||
rm - tests/bugs/vis/bug25768 | Diff File | ||
mod - tests/demo/samples/dimensions | Diff File | ||
mod - tests/v3d/point_cloud/sphere | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-07-26 20:58 | kgv | New Issue | |
2016-07-26 20:58 | kgv | Assigned To | => kgv |
2016-07-26 20:58 | kgv | Relationship added | child of 0024838 |
2016-07-26 22:13 | git | Note Added: 0056234 | |
2016-07-26 22:13 | kgv | Note Added: 0056235 | |
2016-07-26 22:13 | kgv | Assigned To | kgv => bugmaster |
2016-07-26 22:13 | kgv | Status | new => resolved |
2016-07-26 22:13 | kgv | Status | resolved => reviewed |
2016-07-27 16:48 |
|
Assigned To | bugmaster => apv |
2016-07-28 10:01 |
|
Test case number | => Not needed |
2016-07-28 10:22 |
|
Note Added: 0056254 | |
2016-07-28 10:22 |
|
Assigned To | apv => kgv |
2016-07-28 10:22 |
|
Status | reviewed => assigned |
2016-07-28 10:22 |
|
Note Added: 0056255 | |
2016-07-28 12:04 | git | Note Added: 0056262 | |
2016-07-28 12:05 | kgv | Note Added: 0056263 | |
2016-07-28 12:05 | kgv | Assigned To | kgv => bugmaster |
2016-07-28 12:05 | kgv | Status | assigned => feedback |
2016-07-28 15:00 | bugmaster | Status | feedback => tested |
2016-07-29 11:59 | bugmaster | Changeset attached | => occt master be375252 |
2016-07-29 11:59 | bugmaster | Status | tested => verified |
2016-07-29 11:59 | bugmaster | Resolution | open => fixed |
2016-08-26 16:26 | git | Note Added: 0057187 | |
2016-11-08 10:07 | kgv | Relationship added | parent of 0028062 |
2016-11-08 10:30 | kgv | Relationship added | related to 0028069 |
2016-11-08 14:19 | kgv | Relationship added | parent of 0028072 |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |
2021-02-24 21:16 | kgv | Relationship added | parent of 0032150 |